<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/caloriesConsumedHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/calories_consumed"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <Button
        android:id="@+id/updateCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:onClick="onUpdateCalories"
        android:text="@string/update" />

        <requestFocus />
        
    <EditText
        android:id="@+id/inputCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/updateCalories"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/inputCaloriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/inputCalories"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/caloriesConsumedHeading"
        android:text="@string/calories"
        android:textSize="15sp" />

</RelativeLayout>