<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dashboardUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/caloriesBurnedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calories_burned_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.55" >

            <TextView
                android:id="@+id/caloriesBurned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#A9A9A9"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todaysLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/caloriesBurned"
                android:layout_centerHorizontal="true"
                android:text="@string/todays_label" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.55" >

            <TextView
                android:id="@+id/thisWeeksCaloriesBurned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#A9A9A9"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thisWeeksLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/thisWeeksCaloriesBurned"
                android:layout_centerHorizontal="true"
                android:text="@string/this_weeks_label" />
        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_width="wrap_content"
        android:layout_weight="0.00" />

    <TextView
        android:id="@+id/activitesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/activities_labels"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/activitiesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dp">
    </ListView>

</LinearLayout>