<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/recommendationUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/caloriesConsumedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calories_consumed_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/caloriesConsumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="350"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#A9A9A9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/todaysLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/caloriesConsumed"
            android:layout_centerHorizontal="true"
            android:text="@string/todays_label" />
    </RelativeLayout>

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/recommendationsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/recommendations_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
    <ListView
        android:id="@+id/recommendationsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
        <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
   
</LinearLayout>